--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
-  "name": "rcp",
+  "name": "mrb",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/guulzadaa/RCP.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/guulzadaa/RCP/issues"
-  },
-  "homepage": "https://github.com/guulzadaa/RCP#readme",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
-    "hardhat": "^2.22.1"
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "dotenv": "^17.2.4",
+    "hardhat": "^2.28.4"
+  },
+  "dependencies": {
+    "express": "^5.2.1"
   }
 }
